--- a/src/app/components/mainapp/receipt/receipts.component.html
+++ b/src/app/components/mainapp/receipt/receipts.component.html
@@ -37,7 +37,7 @@
             
             <div class="form-group">
               <label for="remarks">Remarks</label>
-              <textarea name="remarks" rows="3"   cols="40" class="form-control"  [(ngModel)]="answer"></textarea>
+              <textarea name="remarks" rows="3"   cols="40" class="form-control" ngModel ></textarea>
             </div>
             <div class="form-group">
                 <mat-radio-group class="paytype-radio-group" [(ngModel)]="paytypecontrol" name="paytype" >
