--- a/src/app/components/mainapp/receipt/receipts.component.html
+++ b/src/app/components/mainapp/receipt/receipts.component.html
@@ -14,7 +14,7 @@
             
             <div class="form-group">
               <label for="rcvdfrom">Received From</label>
-              <input type="text"  id="rcvdfrom"  pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*"   #name="ngModel" (keyup)="clearMessage()"  ngModel  name="rcvdfrom"  required>
+              <input type="text"  id="rcvdfrom"  pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*" maxlength="20"   #name="ngModel" (keyup)="clearMessage()"  ngModel  name="rcvdfrom"  required>
               <div>
                 <div   *ngIf="name.errors?.pattern">
                  <p class="alert alert-danger">
@@ -27,7 +27,7 @@
            
             <div class="form-group">
               <label for="forreason">For</label>
-              <input type="text" id="forreason"  pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*"  #forreason="ngModel"  class="form-control" ngModel name="forreason"  required>
+              <input type="text" id="forreason"  pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*" maxlength="30"  #forreason="ngModel"  class="form-control" ngModel name="forreason"  required>
               <div>
                 <div   *ngIf="forreason.errors?.pattern">
                  <p class="alert alert-danger">
@@ -40,7 +40,7 @@
             <span>
               <div class="form-group">
                   <label for="amount">Amount</label>
-                  <input type="number" id="amount"  class="form-control" ngModel name="amount" pattern="\d+(\.\d{2})?"  required>
+                  <input type="number" id="amount"  class="form-control" ngModel name="amount" pattern="\d+(\.\d{2}$)?"  required>
                   
               </div>  
               <div class="form-group">
@@ -51,7 +51,7 @@
             </span>
             <div class="form-group">
                 <label for="invoice">Invoice</label>
-                <input type="text" id="invoice" #invoice="ngModel" pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*" class="form-control" ngModel name="invoice" required>
+                <input type="text" id="invoice" #invoice="ngModel" maxlength="20" pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*" class="form-control" ngModel name="invoice" required>
                 <div>
                   <div   *ngIf="invoice.errors?.pattern">
                    <p class="alert alert-danger">
@@ -64,11 +64,11 @@
             
             <div class="form-group">
               <label for="remarks">Remarks</label>
-              <textarea name="remarks" rows="3" #remarks="ngModel" pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*"  cols="40" class="form-control" ngModel ></textarea>
+              <textarea name="remarks" rows="3" #remarks="ngModel" pattern="[A-Za-z0-9 #-_$%@{}()\[\],.?!]*" maxlength="100"  cols="40" class="form-control" ngModel ></textarea>
               <div>
                 <div   *ngIf="remarks.errors?.pattern">
                  <p class="alert alert-danger">
-                   Special characters like double quotes not allowed
+                   Special characters like double quotes not allowed. Max allowed length is 100 characters.
                  </p>
              
                 </div>
@@ -80,6 +80,7 @@
                       {{p.viewValue}}
                     </mat-radio-button>
                   </mat-radio-group>
+               
             </div>
            
             <button   class="btn btn-primary"  type="submit"  [disabled]="!f.valid">Submit</button>
