--- a/src/app/components/forgotpasswordvalidatecode/forgotpasswordvalidatecode.component.html
+++ b/src/app/components/forgotpasswordvalidatecode/forgotpasswordvalidatecode.component.html
@@ -17,8 +17,8 @@
             <button class="btn btn=primary" type="submit"  >Reset Password</button>  
         </form>
         <div class="col-sm-8 col-sm-offset-2">
-          <div *ngIf="message" class="alert alert-danger">{{message}}</div>
-         
+            <div class="alert alert-danger" *ngIf="index == 1">{{message}}</div>
+            <div class="alert alert-success"  *ngIf="index == 2">{{message}}</div>
         </div>
         
     </div>
