--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -54,12 +54,12 @@
             <div class="row">
               <div class="column" >
                 <mat-form-field  >
-                  <input matInput placeholder="Amount From" ngModel name="amountfrom" >
+                  <input matInput placeholder="Amount From" ngModel name="amountfrom" style="text-align:right;" >
                 </mat-form-field>
               </div>
               <div class="column" >
                 <mat-form-field  >
-                  <input matInput placeholder="Amount To"  ngModel name="amountto" >
+                  <input matInput placeholder="Amount To"  ngModel name="amountto" style="text-align:right;" >
                 </mat-form-field>
               </div>
             </div>
