--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -213,7 +213,7 @@
                 
               </mat-table>
             
-              <mat-paginator [length]="resultsLength" [pageSize]="5">
+              <mat-paginator #paginator [length]="resultsLength" [pageSize]="5">
               </mat-paginator>
               
             </div>
