--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -39,7 +39,7 @@
         
             <ng-container matColumnDef="date">
                 <mat-header-cell *matHeaderCellDef class="example-header">Date</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.date }}</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.date | date}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="fortrip">
