--- a/src/app/components/mainapp/editreceipt/edit-receipts.html
+++ b/src/app/components/mainapp/editreceipt/edit-receipts.html
@@ -1,7 +1,7 @@
 
 <h1 mat-dialog-title>Edit Receipt {{data.payload.id}}</h1>
  
-<mat-dialog-content [formGroup]="form" #f="ngForm">
+<mat-dialog-content [formGroup]="form" #f="ngForm" id="print-section">
   
   <div class="row">
     <div class="column">
@@ -64,6 +64,10 @@
     <button class="mat-raised-button mat-primary" [disabled]="!f.valid"  
             (click)="save()">
         Save
+    </button>
+    <button class="mat-raised-button mat-primary" [disabled]="!f.valid"  
+    (click)="print()">
+      Print
     </button>
 
 </mat-dialog-actions>
