--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -193,7 +193,7 @@
           
               <!-- Paytype Column -->
               <ng-container matColumnDef="paytype">
-                <mat-header-cell *matHeaderCellDef class="example-header">Paytype</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef class="example-header">Pay Type</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.paytype }}</mat-cell>
               </ng-container>
           
