--- a/src/app/components/mainapp/editreceipt/edit-receipts.html
+++ b/src/app/components/mainapp/editreceipt/edit-receipts.html
@@ -55,11 +55,75 @@
 </mat-dialog-content>
 
 <div id="print-section" class="print-section">
-  
-  {{data.payload.rcvdfrom}} <div style="line-height: 30px; width: 300px; border: 1px solid black;"></div> {{data.payload.id}}
-  {{data.payload.fortrip}}  {{data.payload.amount}}
-  {{data.payload.invoice}}
-  {{data.payload.paytype}}
+  <h2>&emsp;</h2>
+  <div class="d">
+      <!-- empty, but using spacer to prevent collapse -->
+      &emsp;
+      <div class="spacer20"></div>
+  </div>
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
+  <p></p>
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;{{data.payload.rcvdfrom}} 
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp;{{data.payload.fortrip}}  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.date | date}} &emsp;&emsp;&emsp;&emsp;&emsp; {{data.payload.amount}}
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp;{{data.payload.invoice}}
+   <p></p>
+   &emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}
+   <p></p>
+   <p></p>
+
+   
+  <h2>&emsp;</h2>
+  <div class="d">
+      <!-- empty, but using spacer to prevent collapse -->
+      &emsp;
+      <div class="spacer20"></div>
+  </div> 
+  <h2>&emsp;</h2>
+  <div class="d">
+      <!-- empty, but using spacer to prevent collapse -->
+      &emsp;
+      <div class="spacer20"></div>
+  </div> 
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
+  <p></p>
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;{{data.payload.rcvdfrom}} 
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp;{{data.payload.fortrip}}  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.date | date}} &emsp;&emsp;&emsp;&emsp;&emsp; {{data.payload.amount}}
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp;{{data.payload.invoice}}
+   <p></p>
+   &emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}
+   <p></p>
+   <p></p>
+
+  <h2>&emsp;</h2>
+  <div class="d">
+      <!-- empty, but using spacer to prevent collapse -->
+      &emsp;
+      <div class="spacer20"></div>
+  </div>
+  <h2>&emsp;</h2>
+  <div class="d">
+      <!-- empty, but using spacer to prevent collapse -->
+      &emsp;
+      <div class="spacer20"></div>
+  </div> 
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
+  <p></p>
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;{{data.payload.rcvdfrom}} 
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp;{{data.payload.fortrip}}  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.date | date}} &emsp;&emsp;&emsp;&emsp;&emsp; {{data.payload.amount}}
+  <p></p>
+  &emsp;&emsp;&emsp;&emsp;{{data.payload.invoice}}
+   <p></p>
+   &emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}
+   <p></p>
+   <p></p>
 </div>
  
 <mat-dialog-actions>
