--- a/src/app/components/mainapp/editdeposits/editdeposits.component.html
+++ b/src/app/components/mainapp/editdeposits/editdeposits.component.html
@@ -172,7 +172,7 @@
                 </mat-paginator>
               </div>
               <div class="row">
-                  <button class="mat-raised-button mat-primary" (click)="unPost()" > UnPost </button>
+                  <button class="mat-raised-button mat-primary" (click)="unPost()" > Void Deposit </button>
                 </div>
           </mat-expansion-panel>
         </mat-accordion>
