fix for post  box

--- a/src/app/components/mainapp/editreceipt/edit-receipts.html
+++ b/src/app/components/mainapp/editreceipt/edit-receipts.html
@@ -59,9 +59,9 @@
   <div class="d">
       <!-- empty, but using spacer to prevent collapse -->
       &emsp;
-      <div class="spacer20"></div>
+      <div class="spacer10"></div>
   </div>
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
   <p></p>
   <p></p>
   &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;{{data.payload.rcvdfrom}} 
@@ -70,13 +70,18 @@
   <p></p>
   &emsp;&emsp;&emsp;&emsp;{{data.payload.invoice}}
    <p></p>
-   &emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.agentname}}
    <p></p>
    <p></p>
 
    
   <h2>&emsp;</h2>
   <div class="d">
+    <!-- empty, but using spacer to prevent collapse -->
+    &emsp;
+    <div class="spacer10"></div>
+</div>
+  <div class="d">
       <!-- empty, but using spacer to prevent collapse -->
       &emsp;
       <div class="spacer20"></div>
@@ -87,7 +92,7 @@
       &emsp;
       <div class="spacer20"></div>
   </div> 
-  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
   <p></p>
   <p></p>
   &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;{{data.payload.rcvdfrom}} 
@@ -96,7 +101,7 @@
   <p></p>
   &emsp;&emsp;&emsp;&emsp;{{data.payload.invoice}}
    <p></p>
-   &emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.agentname}}
    <p></p>
    <p></p>
 
@@ -112,16 +117,18 @@
       &emsp;
       <div class="spacer20"></div>
   </div> 
-   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.id}}
   <p></p>
   <p></p>
   &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;{{data.payload.rcvdfrom}} 
   <p></p>
   &emsp;&emsp;&emsp;&emsp;{{data.payload.fortrip}}  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.date | date}} &emsp;&emsp;&emsp;&emsp;&emsp; {{data.payload.amount}}
   <p></p>
+  <p></p>
   &emsp;&emsp;&emsp;&emsp;{{data.payload.invoice}}
    <p></p>
-   &emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}}
+   <p></p>
+   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;{{data.payload.paytype}} &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  {{data.payload.agentname}}
    <p></p>
    <p></p>
 </div>
