--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -110,7 +110,7 @@
         <mat-card>
           <!--div class="col-xs-10 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2"-->
             <div class="row">
-              <div class="col-sm-4" style="background-color:lavender;">
+              <div class="col-sm-6" style="background-color:lavender;">
                  
                       <div class="row">
                         <div class="column">
@@ -134,7 +134,7 @@
                       <div class="row">
                           <div class="column">
                               <label class="deposit-label">Cash</label>
-                            <input matInput type="number" class="deposit-inputbox" (change)=updateTotal() placeholder="Total Cash" (keydown)="showCashBox()" [(ngModel)] = "totalcash" > 
+                            <input matInput type="number" class="deposit-inputbox" (change)=updateTotal() placeholder="Total Cash" (keydown)="showCashBox()" [(ngModel)] = "totalcash" value="{{ totalcash | number : '1.2-2' }}">  
                           </div>
                       </div>
                       <div class="row">
